# inventoryk12

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  commitlint.config.cjs  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml
.github/: overview.md
.github/ISSUE_TEMPLATE/: adr.md  bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: backend.md  default.md  docs.md  frontend.md  infra.md
.github/workflows/: ci.yml
configs/: AGENTS.md  README.md
configs/env/: .env.backend.example  .env.frontend.example  README.md
configs/policy/: README.md  access-control.md  data-retention.md  incident-response.md
docs/: AGENTS.md  index.md
docs/adr/: 0001-auth-strategy.md  0001-tech-stack-and-runtime-baseline.md  0002-core-data-model.md  0002-url-and-domain-topology.md  0003-ingestion-architecture.md  0003-non-prod-data-refresh-and-sanitization-policy.md  0004-domain-boundaries-and-ownership.md  0004-identity-domain-model-v1.md  0005-contact-and-address-model-v1.md  0005-rbac-model-and-permission-enforcement.md  0006-code-table-governance-v1.md  0006-identity-domain-model-v1.md  0007-academic-time-model-v1.md  0007-organization-domain-model-v1.md  0008-domain-boundaries-v1.md  0008-locations-domain-model-v1.md  0009-contacts-domain-model-v1.md  0009-domain-adr-decomposition-policy-v1.md  0010-academic-domain-model-v1.md  0010-organization-domain-model-v1.md  0011-instruction-domain-model-v1.md  0011-locations-domain-model-v1.md  0012-contacts-domain-model-v1.md  README.md  (+13 more)
infra/: AGENTS.md
scripts/: AGENTS.md  README.md
(+268 files in other folders)
