[project]
name = "perrinsoft-platform"
version = "0.1.0"
requires-python = ">=3.14"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
disable_error_code = ["var-annotated"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"
